[package]
name = "cfdcrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.4.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.5"
serde = "1"
ron = { version = "0.8", features = ["integer128"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }

